--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,16 @@
     <title>React App</title>
   </head>
   <body>
+    <script>
+      console.log('%NODE_ENV%');
+      var nodeEnv = '%NODE_ENV%';
+      if ('%NODE_ENV%' === 'production') {
+        console.log('This is production!');
+      }
+      if (nodeEnv === 'production') {
+        console.log('This is REALLY production!');
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
